--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,6 @@ streamlit>=1.28.0
 pandas>=2.0.0
 openpyxl>=3.1.0
 xlsxwriter>=3.1.0
-numpy>=1.24.0 
+numpy>=1.24.0
+# Optional: for advanced performance monitoring
+# psutil>=5.9.0 
